fix: dark mode 색상 변경

--- a/app/global.css
+++ b/app/global.css
@@ -67,11 +67,11 @@ html {
 }
 
 .prose pre {
-  @apply bg-slate-800 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-slate-400 dark:border-neutral-900 py-4 px-3 text-sm mb-3;
+  @apply bg-neutral-800 dark:bg-neutral-900 rounded-lg overflow-x-auto border border-neutral-400 dark:border-neutral-900 py-4 px-3 text-sm mb-3;
 }
 
 .prose code {
-  @apply px-1.5 py-0.5 rounded-md bg-slate-50 text-base border-slate-200;
+  @apply px-1.5 py-0.5 rounded-md bg-neutral-50 text-base border-neutral-200;
 }
 
 .prose pre code {
@@ -86,31 +86,31 @@ html {
 
 .prose img {
   /* Don't apply styles to next/image */
-  @apply m-auto;
+  @apply my-6 mx-auto;
 }
 
 .prose p {
-  @apply my-3 text-slate-700 dark:text-slate-200 text-lg;
+  @apply my-4 text-neutral-700 dark:text-neutral-300 text-base leading-7;
 }
 
 .prose h1 {
-  @apply text-4xl font-bold tracking-tight mt-8 mb-2 text-slate-900;
+  @apply text-2xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h2 {
-  @apply text-2xl font-bold tracking-tight mt-8 mb-2 text-slate-900;
+  @apply text-xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h3 {
-  @apply text-xl font-semibold tracking-tight mt-8 mb-2 text-slate-900;
+  @apply text-lg font-semibold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h4 {
-  @apply text-lg font-semibold tracking-tight mt-6 mb-2 text-slate-900;
+  @apply text-base font-semibold tracking-tight mt-6 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose strong {
-  @apply font-semibold text-slate-900;
+  @apply font-semibold text-neutral-900 dark:text-neutral-100;
 }
 
 .prose ul {
